
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;


 int N_R3964 ;
 int const* O_RDWR ;
 int TIOCGPTPEER ;
 int TIOCSETD ;
 int err (int,char*) ;
 int errx (int,char*) ;
 int getpt () ;
 int ioctl (int,int ,int const*) ;
 int printf (char*) ;
 scalar_t__ pthread_create (int *,int *,int (*) (int *),int *) ;
 int ptm_fd ;
 int slave_fd ;
 int system (char*) ;
 int thread_fn (int *) ;
 scalar_t__ unlockpt (int) ;

int main(void) {
  ptm_fd = getpt();
  if (ptm_fd == -1) err(1, "getpt");
  if (unlockpt(ptm_fd)) err(1, "unlockpt");
  slave_fd = ioctl(ptm_fd, TIOCGPTPEER, O_RDWR);
  if (slave_fd == -1) err(1, "TIOCGPTPEER");

  printf("-----------------------------------------\n");
  system("ls -l /proc/$PPID/fd");
  printf("-----------------------------------------\n");

  const int disc_r3964 = N_R3964;
  if (ioctl(slave_fd, TIOCSETD, &disc_r3964)) err(1, "TIOCSETD");

  pthread_t thread;
  if (pthread_create(&thread, ((void*)0), thread_fn, ((void*)0))) errx(1, "pthread_create");

  thread_fn(((void*)0));

  return 0;
}
